# annotation-tool.nvim

./: .gitignore  README.md  pyproject.toml  requirements.txt
annotation_ls_js/: jest.config.js  package-lock.json  package.json  test-file.txt  tsconfig.tsbuildinfo
annotation_ls_js/src/: cli.ts  config.ts  database.ts  index.ts  logger.ts  note_manager.ts  server.ts  utils.ts  workspace.ts
annotation_ls_js/tests/integration/: server.test.ts
annotation_ls_js/tests/unit/: database.test.ts
annotation_ls_node/: .gitignore  test-command.js  test-lsp.js  test.js  tsconfig.json
annotation_ls_node/src/: cli.ts  index.ts  note.ts  server.ts  workspace.ts
annotation_ls_node/tests/unit/: note_manager.test.ts  utils.test.ts
annotation_ls_py/: pyproject.toml
annotation_ls_py/src/: cli.py  server.py
annotation_ls_py/src/annotation_ls_py/: __main__.py  cli.py  config.py  db_manager.py  logger.py  note_manager.py  server.py  utils.py  workspace_manager.py
annotation_lsp/: __init__.py  __main__.py  db_manager.py  server.py
examples/: search_usage.lua
lua/: annotation-tool.lua  annotation-tool_1.lua  annotation-tool_single.lua  backup.lua
lua/annotation-tool/: commands.lua  config.lua  core.lua  init.lua  keymaps.lua  logger.lua  lsp.lua  preview.lua  telescope.lua
lua/annotation-tool/preview/: init.lua  manager.lua
lua/annotation-tool/search/: fzf_lua.lua  init.lua  parser.lua  telescope.lua
markdown_lsp/: markdown.lua  server.py
src/annotation_ls/: __init__.py  cli.py  db_manager.py  note_manager.py  server.py  utils.py  workspace_manager.py
src/annotation_lsp/: __main__.py  config.py  db_manager.py  logger.py  note_manager.py  server.py  utils.py  workspace_manager.py
src/annotation_lsp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: benchmark_list_ops.py
