[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "annotation-tool"
version = "0.1.0"
description = "A Neovim plugin for managing annotations in markdown files"
authors = [
    {name = "Wang Yuantao", email = "wd.1105848296@gmail.com"}
]
requires-python = ">=3.7"
dependencies = [
    "pygls>=1.1.1",
    "lsprotocol>=2023.0.1",
    "python-frontmatter>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/annotation_ls"]
