[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "annotation-tool-py"
version = "0.1.0"
description = "Language server for annotation tool (Python implementation)"
authors = [
    {name = "Wang Yuantao", email = "wd.1105848296@gmail.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pygls>=1.1.1",
    "lsprotocol>=2023.0.1",
    "python-frontmatter>=1.1.0"
]

[project.urls]
"Homepage" = "https://github.com/0WD0/annotation-tool"
"Bug Tracker" = "https://github.com/0WD0/annotation-tool/issues"

[project.scripts]
annotation_ls = "annotation_ls_py.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "mypy>=1.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/annotation_ls_py"]
